--- a/style.css
+++ b/style.css
@@ -90,3 +90,275 @@ button {
   font-size: 17px;
   color: #425466;
 }
+
+/* avtos part */
+.avto-first-page{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 885px;
+  background-image: url(./media/Background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  flex-wrap: wrap;
+}
+
+.first-content{
+  width: 1080px;
+  height: 496px;
+}
+
+.bottom-four-elements{
+  display: flex;
+  margin-top: 105px;
+  gap: 55px;
+}
+
+.first-content{
+  display: flex;
+  flex-direction: column;
+}
+
+.first-element{
+  margin-bottom: 18px;
+  margin-top: 3px;
+}
+
+.second-element{
+  margin-bottom: 18px;
+}
+
+.bottom-text{
+   width: 220px; 
+height: 44px; 
+font-size: 13.71px;
+line-height: 24px;
+color: #ADBDCC;
+}
+
+.bottom-text a{
+  text-decoration: none;
+  color: #00D4FF;
+  font-weight: bold;
+}
+
+.bottom-text a:hover{
+  color: white;
+}
+
+.third-element p{
+  width: 390px; 
+height: 140px; 
+}
+
+.first-element h5{
+  font-size: 17.16px;
+  color: #00D4FF;
+  line-height: 28px;
+  letter-spacing: 0.2px;
+  margin-left: 13px;
+}
+
+.second-element h2{
+  font-size: 35.18px;
+  line-height: 48px;
+  color: #FFFFFF;
+  margin-left: 13px;
+
+}
+
+.third-element p{
+  font-size: 17.72px;
+  line-height: 28px;
+  color: #ADBDCC;
+  margin-left: 13px;
+}
+.bottom-four-elements h2{
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.1px;
+  color: white;
+}
+
+.stat-item {
+  display: flex;
+}
+
+.vertical-line {
+  width: 1px;
+  height: 24px; 
+  background-color: #00D4FF;
+  margin-right: 13px;
+  margin-top: 4px;
+}
+.section-2{
+  margin-left: 230px;
+}
+.section-2 h3{
+  font-size: 16.45px;
+  color: #635BFF;
+  letter-spacing: 0.2px;
+  margin-top: 100px;
+
+}
+.section-2 p{
+  width: 810px;
+  height: 130px;
+  color: #425466;
+  font-size: 16.45px;
+  letter-spacing: 0.2px;
+  line-height: 28px;
+
+
+}
+
+.section-2 h1{
+  font-size: 34px;
+  color: #0A2540;
+  letter-spacing: -0.2px;
+  margin-top: 25px;
+}
+
+.section-2 a{
+  color: #635BFF;
+  text-decoration: none;;
+}
+
+.section-2 button{
+  background-color: #635BFF;
+  height: 33px;
+  border-radius: 16px;
+  width: 150px;
+  color: white;
+  border: none;
+}
+
+.section-3{
+  margin-left: 214px;
+  margin-top: 60px;
+}
+
+.vertical-line-2{
+  display: inline-block;
+  width: 1px;
+  height: 24px;
+  background-color: #00D4FF;
+  margin-right: 13px;
+  margin-top: 5px;
+}
+
+.section2-main{
+  display: flex;
+}
+
+.company-logos{
+  display: flex;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.section-2-second{
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
+.section2-main-1{
+  display: flex;
+}
+.section-2 a:hover{
+  color:black;
+  font-weight: bold;
+}
+.vertical-line-3{
+  display: inline-block;
+  width: 1px;
+  height: 15px;
+  background-color: #635BFF;
+  margin-right: 13px;
+  margin-top: 2px;
+}
+
+.vertical-line-4{
+  display: inline-block;
+  width: 1px;
+  height: 24px;
+  background-color: #635BFF;
+  margin-right: 13px;
+  margin-top: 5px;
+}
+
+.section2-main h1{
+  color:#0A2540;
+  font-size: 22.5px;
+  line-height: 32px;
+  letter-spacing: 0.2px;
+}
+
+.section2-main p {
+  color: #425466;
+  font-size: 14px;
+  line-height: 24px;
+  width: 180px;
+}
+
+.container-section2{
+  display: flex;
+  justify-content: space-around;
+  margin-right: 200px;
+  background-image: url(./media/Background2.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  flex-wrap: wrap;
+  background-position: calc(100% + 62px) center;
+}
+.bmw-picture{
+  margin-top: 50px;
+}
+
+.colored-line {
+  display: flex; 
+  width: 1060px; 
+  height: 1px; 
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+
+.line-section { 
+  flex: 1;
+}
+
+.red {
+  background-color: rgb(198, 145, 145);
+}
+
+.blue {
+  background-color: rgb(142, 142, 236);
+}
+
+.green {
+  background-color: rgb(132, 185, 132);
+}
+
+.yellow {
+  background-color: rgb(214, 214, 125);
+}
+.first-logo{
+  width: 40px;
+  height: 40px;
+}
+.second-logo{
+  width: 92px;
+  height: 28px;
+}
+.logos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
+  margin-bottom: 128px;
+}
+
+
+
+
+/* the end of Avto's part */
