--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ ul {
   display: flex;
   align-items: center;
   gap: 5px;
-  transition: opacity 0.3s ease;
 }
 .normal-button button {
   background-color: #ffffff;
@@ -64,7 +63,6 @@ ul {
   display: flex;
   align-items: center;
   gap: 5px;
-  transition: opacity 0.3s ease;
 }
 .menu-buttons {
   display: flex;
@@ -76,6 +74,7 @@ ul {
 }
 button {
   cursor: pointer;
+  transition: opacity 0.3s ease;
 }
 .menu {
   display: flex;
@@ -89,4 +88,25 @@ button {
 .left-side p {
   font-size: 17px;
   color: #425466;
+}
+.black-button button {
+  color: #ffffff;
+  background-color: #0a2540;
+  border: 1px solid #0a2540;
+  border-radius: 16.5px;
+  padding: 6px 13px 6px 13px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.black-button button:hover {
+  opacity: 0.6;
+}
+.second-ghost-button button {
+  color: #0a2540;
+  border: none;
+  background-color: transparent;
+}
+.black-arrow {
+  cursor: pointer;
 }
