feature issuing and connect Done!

--- a/style.css
+++ b/style.css
@@ -280,6 +280,12 @@ button {
   padding-top: 250px;
   padding-bottom: 250px;
 }
+.conect {
+  padding-bottom: 200px;
+}
+.issuing{
+  padding-bottom: 200px;
+}
 /* end of Anastasia's part*/
 
 /* avtos part */
