changed bg img!

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 .first-section {
-  background-image: url(./media/gradient-bg.png);
+  background-image: url(./media/image.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
