footer padding-bottom added

--- a/style.css
+++ b/style.css
@@ -1018,6 +1018,7 @@ a {
   justify-content: center;
   margin-top:70px;
   gap: 50px;
+  padding-bottom: 125px;
 }
 #footer1{
   margin-top: 320px;
